--- a/assets/css/style1.css
+++ b/assets/css/style1.css
@@ -2,6 +2,7 @@ body {
     margin: 0;
     padding: 0;
     background-color: red;
+    scroll-behavior: smooth;
 }
 .jumbotron img {
     width: 100vw;
@@ -13,7 +14,10 @@ header {
 .header-content {
     top: 0;
     display: flex;
-    background-color: black;
+    background: #ff0000;
+background: linear-gradient(182deg,#ff0000 5%, #000000 50%, #000000 100%);
+background: -webkit-linear-gradient(182deg,#ff0000 5%, #000000 50%, #000000 100%);
+background: -moz-linear-gradient(182deg,#ff0000 5%, #000000 50%, #000000 100%);
     align-items: center;
     padding: 0;
     position: sticky;
@@ -23,7 +27,7 @@ header {
 
 #logo-vair {
     padding: 20px;
-    margin-left: 100px;
+    margin-left: 40px;
     height: 11vh;
 }
 
@@ -47,6 +51,7 @@ header {
 .navigasi ul a:hover {
     background-color: aliceblue;
     color: red;
+    font-weight: 400;
     transition: .2s;
     transform: skew(15deg) translate(-10px,0px);
 -webkit-transform: skew(15deg) translate(-10px,0px);
