--- a/assets/css/style-product.css
+++ b/assets/css/style-product.css
@@ -83,6 +83,7 @@ body{
 .nav-product a img{
     text-align: center;
     width: 18%;
+    transition: filter 0.3s ease;
 }
 
 .nav-product a p{
@@ -95,7 +96,7 @@ main{
 
 .card{
     width: 18em;
-    height: 25em;
+    height: 29em;
     box-shadow: 0 4px 8px 0 rgba(1, 27, 62, 0.5);
     overflow: hidden;
     color: #4a4a4a;
@@ -109,13 +110,13 @@ main{
     height: 300px;
 }
 
-.card img {
+.img-wrap img {
     width: 100%;
     height: 100%;
     transition: transform 0.3s;
 }
 
-.card:hover img {
+.card:hover .img-wrap img {
     transform: scale(1.1);
 }  
 
@@ -137,6 +138,26 @@ main{
 
 .card .text p{
     margin-bottom: 5px;
+}
+
+#detail{
+    margin-top: 15px;
+    width: fit-content;
+    padding: 5px 10px;
+    border: 1px solid rgba(128, 128, 128, 0.422);
+    border-radius: 10px;
+    transition: border-color 0.3s ease, color 0.3s ease;
+}
+
+.card .text p img{
+    margin-left: 60px;
+    width: 25px;
+    vertical-align: middle;
+}
+
+#detail:hover{
+    border: 1px solid rgb(253, 0, 0.4);
+    color: rgb(253, 0, 0.4);
 }
 
 
