--- a/assets/css/style1.css
+++ b/assets/css/style1.css
@@ -2,6 +2,9 @@ body{
     margin: 0;
     padding: 0;
     background-color: darkblue;
+    overflow-x: hidden;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    
 }
 *{
     scroll-behavior: smooth;
@@ -79,12 +82,14 @@ background: -moz-linear-gradient(182deg,darkblue 5%, #000000 50%, #000000 100%);
 }
 
 .container {
-    height: 100vh;
+    
+}
+.navigasi{
+    margin-left: auto;
 }
 
 .navigasi ul{
     display: flex;
-    margin-left: 40vw;
 
 }
 
@@ -115,8 +120,8 @@ box-shadow: -12px 11px 3px -3px rgba(0,153,255,0.62);
 }
 
 
-/* content  */
-
+/* CONTENT  */
+/* profile */
 .profile-introduction{
     margin-top: 20px;
     display: flex;
@@ -127,7 +132,7 @@ box-shadow: -12px 11px 3px -3px rgba(0,153,255,0.62);
 
 .profile-introduction .introduction {
     padding: 30px;
-    background: rgba(0, 0, 0, 0.4);
+    background: rgba(5, 5, 5, 0.589);
     color: white;
     text-align: justify;
     border-radius: 20px;
@@ -156,6 +161,180 @@ box-shadow: -12px 11px 3px -3px rgba(0,153,255,0.62);
     width: 42vw;
     animation: naikTurun 4s infinite;
 }
+
+/* product  */
+/* title */
+.product-title {
+    background-color: #000000;
+    letter-spacing: 3px;
+    color: white;
+    font-family: 'Bebas Neue', sans-serif;
+    text-align: center;
+    align-content: center;
+    font-size: 24pt;
+}
+.product-title span {
+    color: red;
+}
+.product{
+    padding-bottom: 20px;
+    text-align: center;
+    background-color: aliceblue;
+}
+.button-product a{
+    text-decoration: none;
+    font-size: 16pt;
+    background-color: #00000059;
+    padding: 20px 100px;
+    margin: 12px;
+    color: #000000;
+    width: 500px;
+    border-radius: 20px;
+}
+.button-product a:hover {
+    background-color: #000000e8;
+    color: aliceblue;
+    font-size:18pt ;
+    transition: .2s;
+}
+.button-product{
+    margin: 20px;
+    color: #000000;
+}
+
+/* card */
+.card{
+    width: 18em;
+    height: 29em;
+    box-shadow: 0 4px 8px 0 rgba(1, 27, 62, 0.5);
+    overflow: hidden;
+    color: #4a4a4a;
+    background-color: aliceblue;
+    border-radius: 10px;
+}
+
+.img-wrap{
+    background-size: cover;
+    background-position: center;
+    overflow: hidden;
+    height: 300px;
+}
+
+.img-wrap img {
+    width: 100%;
+    height: 100%;
+    transition: transform 0.3s;
+}
+
+.card:hover .img-wrap img {
+    transform: scale(1.1);
+}  
+
+.product-wrap{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    padding-bottom: 50px;
+    gap: 20px;
+}
+.product-wrap a {
+    text-decoration: none;
+}
+
+.card .text {
+    padding: 16px;
+}
+
+.card .text h3 {
+    margin-bottom: 8px ;
+}
+
+.card .text p{
+    margin-bottom: 5px;
+}
+
+#detail{
+    margin-top: 15px;
+    width: fit-content;
+    padding: 5px 10px;
+    border: 1px solid rgba(128, 128, 128, 0.422);
+    border-radius: 10px;
+    transition: border-color 0.3s ease, color 0.3s ease;
+}
+
+.card .text p img{
+    margin-left: 60px;
+    width: 25px;
+    vertical-align: middle;
+}
+
+#detail:hover{
+    border: 1px solid rgb(253, 0, 0.4);
+    color: rgb(253, 0, 0.4);
+}
+/* card animation */
+.product-wrap a:nth-child(1){
+    --animate-delay:0.5s;
+}
+.product-wrap a:nth-child(2){
+    --animate-delay:1s;
+}
+.product-wrap a:nth-child(3){
+    --animate-delay:1.5s;
+}
+.product-wrap a:nth-child(4){
+    --animate-delay:2s;
+}
+.product-wrap a:nth-child(5){
+    --animate-delay:2.5s;
+}
+.product-wrap a:nth-child(6){
+    --animate-delay:3s;
+}
+
+
+/* testimoni  */
+
+
+/* channel  */
+.channel {
+    display: flex;
+    background-color: #830d0d;
+    justify-content:space-between;
+    align-items: center;
+    padding: 0px 70px;
+    height: 70px;
+}
+.channel p {
+    letter-spacing: 2px;
+    font-size: 30pt;
+    color: aliceblue;
+    font-family: 'Bebas Neue', sans-serif;
+}
+.channel p span {
+    color: rgb(0, 0, 0);
+}
+
+.channel-icon {
+    display: flex;
+}
+
+.channel-icon a {
+    margin: 0 10px;
+    padding: 10px;
+    border-radius: 30px;
+    transition: .2s;
+}
+.channel a:hover{
+    background-color: rgba(0, 0, 0, 0.637);
+    transform: translateY(-10px);
+    transition: .5s;
+}
+
+.channel-icon i {
+    color: aliceblue;
+}
+
 
 
 /* footer  */
@@ -233,7 +412,8 @@ box-shadow: -12px 11px 3px -3px rgba(0,153,255,0.62);
     text-align: center;
     border-radius: 30px;
     margin-top: 50px;
-    padding: 30px;
+    margin-right: 40px;
+    padding: 25px;
     background: #000000;
 background: linear-gradient(90deg,#000000 0%, #011253 80%);
 background: -webkit-linear-gradient(90deg,#000000 0%, #011253 80%);
@@ -252,6 +432,7 @@ background: -moz-linear-gradient(90deg,#000000 0%, #011253 80%);
     display: flex;
     letter-spacing: 1px;
     font-family: 'Poppins', sans-serif;
+    align-items: center;
     text-decoration: none;
     color: aliceblue;
     font-size: 14pt;
@@ -259,6 +440,7 @@ background: -moz-linear-gradient(90deg,#000000 0%, #011253 80%);
 
 .contact a p {
     margin-left: 20px;
+    text-align: start;
 }
 .contact a:hover{
     color: red;
@@ -269,6 +451,7 @@ background: -moz-linear-gradient(90deg,#000000 0%, #011253 80%);
 .copyright{
     text-align: center;
     letter-spacing: 2px;
+    width: auto;
     padding: 40px;
     padding-top: 60px;
     font-size: 1em;
