--- a/assets/css/style-aboutus.css
+++ b/assets/css/style-aboutus.css
@@ -146,7 +146,8 @@ box-shadow: -12px 11px 3px -3px rgba(0,153,255,0.62);
     text-align: center;
     border-radius: 30px;
     margin-top: 50px;
-    padding: 30px;
+    margin-right: 40px;
+    padding: 25px;
     background: #000000;
 background: linear-gradient(90deg,#000000 0%, #011253 80%);
 background: -webkit-linear-gradient(90deg,#000000 0%, #011253 80%);
@@ -165,6 +166,7 @@ background: -moz-linear-gradient(90deg,#000000 0%, #011253 80%);
     display: flex;
     letter-spacing: 1px;
     font-family: 'Poppins', sans-serif;
+    align-items: center;
     text-decoration: none;
     color: aliceblue;
     font-size: 14pt;
@@ -172,6 +174,7 @@ background: -moz-linear-gradient(90deg,#000000 0%, #011253 80%);
 
 .contact a p {
     margin-left: 20px;
+    text-align: start;
 }
 .contact a:hover{
     color: red;
@@ -182,11 +185,49 @@ background: -moz-linear-gradient(90deg,#000000 0%, #011253 80%);
 .copyright{
     text-align: center;
     letter-spacing: 2px;
+    width: auto;
     padding: 40px;
     padding-top: 60px;
     font-size: 1em;
     color: whitesmoke;
     background-color: #000000;
+}
+
+/* keyframes */
+@keyframes fadeInOut {
+    0% {
+        opacity: 0.25;
+    }
+    25% {
+        opacity: 0.5;
+    }
+    50% {
+        opacity: 1;
+    }
+    75% {
+        opacity: 0.5;
+    }
+    100% {
+        opacity: 0.25;
+    }
+    
+}
+@keyframes naikTurun {
+    0% {
+        transform: translateY(0);
+    }
+    25% {
+        transform: translateY(6px);
+    }
+    50% {
+        transform: translateY(-6px);
+    }
+    75% {
+        transform: translateY(6px);
+    }
+    100% {
+        transform: translateY(0);
+    }
 }
 
 @keyframes hoverUnderline {
