--- a/assets/css/style-dealer.css
+++ b/assets/css/style-dealer.css
@@ -363,7 +363,7 @@ background: -moz-linear-gradient(90deg,#000000 0%, #011253 80%);
 }
 
 .slide-in {
-    animation: slideIn 2s ease; /* Ganti dengan animasi dan waktu yang diinginkan */
+    animation: slideIn 2s ease; 
     opacity: 1;
     transform: translateX(0);
   }
@@ -371,7 +371,7 @@ background: -moz-linear-gradient(90deg,#000000 0%, #011253 80%);
   @keyframes slideIn {
     from {
       opacity: 0;
-      transform: translateX(-50px); /* Ganti dengan jarak slide yang diinginkan */
+      transform: translateX(-50px); 
     }
     to {
       opacity: 1;
@@ -397,6 +397,7 @@ background: -moz-linear-gradient(90deg,#000000 0%, #011253 80%);
 
     .navigasi ul.show {
         display: flex;
+        text-align: center;
     }
 
     .navigasi ul a {
@@ -404,6 +405,11 @@ background: -moz-linear-gradient(90deg,#000000 0%, #011253 80%);
         padding: 15px;
         width: 100%;
         box-sizing: border-box;
+        margin-left: 0;
+        
+    }
+    .navigasi ul a li {
+        font-size: 12pt;
     }
 
     .menu-icon {
