--- a/assets/css/style1.css
+++ b/assets/css/style1.css
@@ -583,7 +583,7 @@ background: -moz-linear-gradient(90deg,#000000 0%, #011253 80%);
 }
 
 .slide-in {
-    animation: slideIn 2s ease; /* Ganti dengan animasi dan waktu yang diinginkan */
+    animation: slideIn 2s ease;
     opacity: 1;
     transform: translateX(0);
   }
@@ -591,7 +591,7 @@ background: -moz-linear-gradient(90deg,#000000 0%, #011253 80%);
   @keyframes slideIn {
     from {
       opacity: 0;
-      transform: translateX(-50px); /* Ganti dengan jarak slide yang diinginkan */
+      transform: translateX(-50px); 
     }
     to {
       opacity: 1;
@@ -617,6 +617,7 @@ background: -moz-linear-gradient(90deg,#000000 0%, #011253 80%);
 
     .navigasi ul.show {
         display: flex;
+        
     }
 
     .navigasi ul a {
@@ -624,6 +625,10 @@ background: -moz-linear-gradient(90deg,#000000 0%, #011253 80%);
         padding: 15px;
         width: 100%;
         box-sizing: border-box;
+        margin-left: 0;
+    }
+    .navigasi ul a li {
+        font-size: 12pt;
     }
 
     .menu-icon {
