--- a/assets/css/news.css
+++ b/assets/css/news.css
@@ -382,3 +382,114 @@ background: -moz-linear-gradient(90deg,#000000 0%, #011253 80%);
       transform: translateX(0);
     }
   }
+
+@media screen and (max-width: 768px){
+    body {
+        overflow-x: hidden;
+        font-size: 80%;
+    }
+    /* header  */
+    .navigasi ul {
+        display: none;
+        flex-direction: column;
+        position: absolute;
+        top: 60px;
+        left: 0;
+        background: darkblue;
+        width: 100%;
+        z-index: 1;
+    }
+
+    .navigasi ul.show {
+        display: flex;
+        
+    }
+
+    .navigasi ul a {
+        text-align: center;
+        padding: 15px;
+        width: 100%;
+        box-sizing: border-box;
+        margin-left: 0;
+    }
+    .navigasi ul a li {
+        font-size: 12pt;
+    }
+
+    .menu-icon {
+        display: block;
+        cursor: pointer;
+        color: white;
+        margin-right: 30px;
+    }
+
+    /* content */
+    .content-wrap{
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .card{
+        width: 70vw;
+        align-items: center;
+        margin: 0 auto;
+    }
+
+    /* footer  */
+    .channel p{
+        display: none;
+    }
+    .channel{
+        display: flex;
+        text-align: center;
+        justify-content: center;
+    }
+    .left-footer-title img {
+      margin-left: 2vw; 
+      width: 15vw; 
+    }
+    .footer{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        padding-left: 5vw ;
+    }
+    .left-footer{
+        width: 80vw;
+    }
+    .left-footer-title p {
+      font-size: 16pt; 
+      margin-left: 5px; 
+
+    }
+    
+    .left-footer-content ul a li {
+      font-size: 12pt; 
+      line-height: 2em; 
+    }
+    
+    .left-footer-content ul {
+      margin-left: 10%;
+      line-height: 2em; 
+    }
+    
+    .instansi img {
+      height: 50px; 
+      margin: 5px; 
+    }
+    
+    .contact-us h2 {
+      font-size: 1.5em; 
+      letter-spacing: 3px; 
+    }
+    
+        .contact a {
+          font-size: 12pt;
+        }
+      
+        .copyright {
+          padding: 20px; 
+          font-size: smaller;
+        }
+  }
