--- a/assets/css/style-aboutus.css
+++ b/assets/css/style-aboutus.css
@@ -485,6 +485,7 @@ background: -moz-linear-gradient(90deg,#000000 0%, #011253 80%);
   @media screen and (max-width: 768px) {
     body {
         overflow-x: hidden;
+        font-size: 80%;
     }
     /* header  */
     .navigasi ul {
@@ -637,6 +638,21 @@ background: -moz-linear-gradient(90deg,#000000 0%, #011253 80%);
     .desc-komitmen p{
         font-size: 12pt;
     }
+    .komitmen-layanan-komunitas ul {
+        display: flex;
+        padding-top: 20px;
+        justify-content: center; 
+    }
+      
+      .komitmen-layanan-komunitas ul li {
+        list-style: none;
+        padding: 10px;
+        border: 2px solid white;
+        margin: 10px;
+        width: 100px;
+        cursor: pointer;
+        font-size: 14pt;
+      }
     
     /* footer  */
     .channel p{
